# fluxer-bounty-bot

./: .env.example  Cargo.toml  DOCS.md  Dockerfile  docker-compose.yml  sqlx.toml
.sqlx/: query-147358b78706056617015849c1db4578697c24543ecf6457360bf98d0bcd50e2.json  query-161968a8f80f8f8fda76aea6812f4e65ad1ac155f9fbcba26f32d1cfd5dcaeec.json  query-171f561ee8a6b712cced53f7e8707293e42a84f88c5e54e39819ff3130335aac.json  query-1bdd3ba93730b505783d0ed7669515727f2e6c1a0f8f5bbadf5f1a93779c07ef.json  query-1c7187fe134cec74e85de3688ada043f8bb42c3d21bbc21c2802cbf2bbf0667a.json  query-1da7832befbcdcd4bb6490d007559bcd0ca1da372b4cc321ef46b040c51ce8a6.json  query-38cdf0dccff9090c9dba95eef782ac3b8b9e3b149319d3ca88b676148b863b76.json  query-664a6a927a256da52af58f9cad8dfecb32aaecba89c6581232fb5a434e291634.json  query-701d8b21a34e0484f4c510400271ed3a20930f95d0b94b5f0f7affb02a4ff022.json  query-7fd38bd058d01d7c8131a93f279f61fb0c590e847cc0c24ee91e7c054b03bf69.json  query-82bb9c34730cd10b4a1091c6e5346fae0dd8d20780396209ae969655633b6959.json  query-9979126cb6a4602c72d190641e211ef64d0351b2785b934c78157d27d58ea119.json  query-9a4a0d3fc1e1b460f282d84eda1cdf9054174a86deac00c4b428556988400570.json  query-9afab077067084770241ae4a0827e9409a33dead99ac997aa10332a6bb8b9021.json  query-a4ec234ff80779d6f712438c663fd211fc9141af0ab00611a7e344ca84be1926.json  query-b208a2b3fdec984c0256a6c4dd6aa7c00b19a99ed737da094776c349449c87da.json  query-b37903fb4a7ffa010e31377cc765620fa68a70b4be534995583433b3982f2465.json  query-ce4c25bf8369f242149c26a10f33cbdc6a0c63a53a08928afc13da450d22596b.json  (+4 more)
src/: commands.rs  (+4 more)
(+14 files in other folders)
