[package]
name = "bounty-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
fluxer-neptunium = { git = "https://github.com/PilkeySEK/fluxer-neptunium", features = [
    "experimental-macros",
    "chrono-timestamp-conversion",
] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
sqlx = { version = "0.9.0", features = ["postgres", "chrono", "runtime-tokio"] }
chrono = "0.4.45"
dotenvy = "0.15.7"
moka = { version = "0.12.15", features = ["sync"] }
serde = "1.0.228"
serde_json = "1.0.150"
sqids = "0.4.2"
strum = { version = "0.28.0", features = ["derive"] }
enum-map = { version = "2.7.3", features = ["serde"] }
enumset = { version = "1.1.13", features = ["serde"] }
bitflags = "2.13.0"

[lints.clippy]
pedantic = "warn"
perf = "warn"
complexity = "warn"
suspicious = "warn"
unwrap_used = "warn"
expect_used = "warn"
new_without_default = { level = "allow", priority = 1 }
allow_attributes = "warn"
